# farmland-border-detection

./: .gitignore  README.md  border_polygon_merger.py  config.ini  database.py  main.py  main_experiment.py  osm_data_fetcher.py  pyproject.toml  remove_none_land_area.py  temp.py  test.py  test2.py  utils.py  write_in.py
archived/: jpg2tif.py  osm_fetcher.py  osm_processer.py  satellite_image_fetcher.py
borderdetection/: answers.py  border_polygon_merger.py  borderdetection.py  geojson2tif.py  loss.py  mask2geojson.py  npy2mask.py  process_method.py
gray_mask/preds/: threshold_8.tif.aux.xml
pred_gray/preds/: 37259.png.aux.xml
tifs/answers/: 37259.tif.aux.xml
tifs/preds/: 3043.tif.aux.xml  369967.tif.aux.xml  37259.tif.aux.xml
