[tool.poetry]
name = "raw-api"
version = "0.1.0"
description = ""
authors = ["Haopinnn <dr476825@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
affine = "2.4.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "23.2.0"
certifi = "2024.2.2"
cftime = "1.6.3"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-plugins = "1.1.1"
cligj = "0.7.2"
colorama = "0.4.6"
contourpy = "1.2.1"
cycler = "0.12.1"
dnspython = "2.6.1"
email-validator = "2.1.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
fiona = "1.9.6"
fonttools = "4.51.0"
geopandas = "0.14.4"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
imageio = "2.34.1"
jinja2 = "3.1.4"
kiwisolver = "1.4.5"
lazy-loader = "0.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.9.0"
mdurl = "0.1.2"
netcdf4 = "1.6.5"
networkx = "3.3"
numpy = "1.26.4"
orjson = "3.10.3"
packaging = "24.0"
pandas = "2.2.2"
pillow = "10.3.0"
polars = "0.20.30"
pydantic = "2.7.2"
pydantic-core = "2.18.3"
pygments = "2.18.0"
pymysql = "1.1.1"
pyparsing = "3.1.2"
pyproj = "3.6.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytz = "2024.1"
pyyaml = "6.0.1"
rasterio = "1.3.10"
requests = "2.32.2"
rich = "13.7.1"
rioxarray = "0.15.5"
scikit-image = "0.23.2"
scipy = "1.13.1"
shapely = "2.0.4"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
snuggs = "1.4.7"
sqlalchemy = "2.0.30"
starlette = "0.37.2"
tifffile = "2024.5.22"
typer = "0.12.3"
typing-extensions = "4.12.0"
tzdata = "2024.1"
ujson = "5.10.0"
urllib3 = "2.2.1"
uvicorn = "0.30.1"
watchfiles = "0.22.0"
websockets = "12.0"
xarray = "2024.5.0"
geojson = "^3.1.0"
dask = "^2024.7.1"
logging = "^0.4.9.6"
filetype = "^1.2.0"


[tool.poetry.group.dev.dependencies]
typedframe = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
