[tool.poetry]
name = "border-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
mlflow = "^2.16.2"
rioxarray = "^0.17.0"
xarray = "^2024.9.0"
rasterio = "^1.4.1"
shapely = "^2.0.6"
pandas = "^2.2.3"
geopandas = "^1.0.1"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
